fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -1251,7 +1251,7 @@ p#achievementDescription{
     #app-container-login{
         position: relative;
 
-
+        min-height:480px;
         height: 100%;
 
 
